[package]
name = "sovereign_master_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
base64 = "0.22"
zstd = "0.13"
lazy_static = "1.4"
byteorder = "1.5"
bincode = "1.3"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
